include/maplibre_native_c/map.h

/** Field mask values for mln_camera_options. */
typedef enum mln_camera_option_field : uint32_t {
  MLN_CAMERA_OPTION_CENTER = 1U << 0U,
  MLN_CAMERA_OPTION_ZOOM = 1U << 1U,
  MLN_CAMERA_OPTION_BEARING = 1U << 2U,
  MLN_CAMERA_OPTION_PITCH = 1U << 3U,
  MLN_CAMERA_OPTION_CENTER_ALTITUDE = 1U << 4U,
  MLN_CAMERA_OPTION_PADDING = 1U << 5U,
  MLN_CAMERA_OPTION_ANCHOR = 1U << 6U,
  MLN_CAMERA_OPTION_ROLL = 1U << 7U,
  MLN_CAMERA_OPTION_FOV = 1U << 8U,
} mln_camera_option_field;
/** Field mask values for mln_animation_options. */
typedef enum mln_animation_option_field : uint32_t {
  MLN_ANIMATION_OPTION_DURATION = 1U << 0U,
  MLN_ANIMATION_OPTION_VELOCITY = 1U << 1U,
  MLN_ANIMATION_OPTION_MIN_ZOOM = 1U << 2U,
  MLN_ANIMATION_OPTION_EASING = 1U << 3U,
  MLN_ANIMATION_OPTION_TRANSITION_ID = 1U << 4U,
} mln_animation_option_field;
/** Field mask values for mln_camera_fit_options. */
typedef enum mln_camera_fit_option_field : uint32_t {
  MLN_CAMERA_FIT_OPTION_PADDING = 1U << 0U,
  MLN_CAMERA_FIT_OPTION_BEARING = 1U << 1U,
  MLN_CAMERA_FIT_OPTION_PITCH = 1U << 2U,
} mln_camera_fit_option_field;
/** Field mask values for mln_bound_options. */
typedef enum mln_bound_option_field : uint32_t {
  /**
   * Selects mln_bound_options.bounds as a geographic constraint that the
   * camera center stays inside. Mutually exclusive with
   * MLN_BOUND_OPTION_UNBOUNDED.
   */
  MLN_BOUND_OPTION_BOUNDS = 1U << 0U,
  MLN_BOUND_OPTION_MIN_ZOOM = 1U << 1U,
  MLN_BOUND_OPTION_MAX_ZOOM = 1U << 2U,
  MLN_BOUND_OPTION_MIN_PITCH = 1U << 3U,
  MLN_BOUND_OPTION_MAX_PITCH = 1U << 4U,
  /**
   * Selects the unbounded geographic constraint, which leaves every camera
   * center unconstrained and lets the map pan freely across the antimeridian.
   * This differs from world bounds of -90/-180 to 90/180, which clamp
   * longitude to that range. Mutually exclusive with MLN_BOUND_OPTION_BOUNDS,
   * and leaves mln_bound_options.bounds unread.
   */
  MLN_BOUND_OPTION_UNBOUNDED = 1U << 5U,
} mln_bound_option_field;
/** Map constraint modes used by mln_map_viewport_options. */
typedef enum mln_constrain_mode : uint32_t {
  MLN_CONSTRAIN_MODE_NONE = 0,
  MLN_CONSTRAIN_MODE_HEIGHT_ONLY = 1,
  MLN_CONSTRAIN_MODE_WIDTH_AND_HEIGHT = 2,
  MLN_CONSTRAIN_MODE_SCREEN = 3,
} mln_constrain_mode;
/** Screen-space point in logical map pixels. */
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
/** Screen-space inset in logical map pixels. */
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
/** Camera fields used for snapshots and camera commands. */
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  /**
   * Screen-space focal point for a camera command. This field is input-only.
   *
   * MapLibre Native applies it to camera commands and leaves it out of every
   * camera snapshot it reports, so MLN_CAMERA_OPTION_ANCHOR is set only by the
   * caller. mln_map_get_camera(), mln_map_projection_get_camera(), and the
   * mln_map_camera_for_* family leave it clear.
   */
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
/** Cubic easing curve for animated camera transitions. */
typedef struct mln_unit_bezier {
  double x1;
  double y1;
  double x2;
  double y2;
} mln_unit_bezier;
/** Optional animation controls for camera transitions. */
typedef struct mln_animation_options {
  uint32_t size;
  uint32_t fields;
  /**
   * Duration in milliseconds. Must be finite and non-negative. Values that
   * would overflow MapLibre Native's internal duration are invalid.
   *
   * When this field is omitted, ease, pan, zoom, rotate, and pitch transitions
   * default to zero and apply instantly, while mln_map_fly_to() derives a
   * duration from velocity instead.
   */
  double duration_ms;
  /**
   * Average flyTo velocity in screenfuls per second. Must be positive.
   * Defaults to 1.2 when omitted. Applies to mln_map_fly_to().
   */
  double velocity;
  /** Peak zoom for flyTo transitions. */
  double min_zoom;
  mln_unit_bezier easing;
  /**
   * Caller-chosen identity for the transition this options struct starts.
   *
   * When MLN_ANIMATION_OPTION_TRANSITION_ID is set, the transition emits one
   * MLN_RUNTIME_EVENT_MAP_CAMERA_TRANSITION_FINISHED event carrying this value
   * in its mln_runtime_event_camera_transition_finished payload. The C API
   * passes the value through without interpreting it, so callers pick their own
   * scheme, such as a monotonically increasing counter.
   *
   * Each transition emits that event exactly once, whichever way it ends:
   * running to completion, being superseded by a later camera command, being
   * cancelled by mln_map_cancel_transitions(), or completing instantly as a
   * zero-duration jump. A command this API rejects -- one carrying a non-finite
   * enabled camera field, for example -- starts no transition and emits no such
   * event. The event carries no completion reason, so a host that needs to tell
   * completion from cancellation compares the resulting camera against the
   * requested one, or tracks which transition ID is current.
   *
   * The event is queued on the runtime that owns the map and is drained by
   * mln_runtime_poll_event(). For a transition that runs to completion, it is
   * queued immediately before that transition's
   * MLN_RUNTIME_EVENT_MAP_CAMERA_DID_CHANGE event.
   *
   * When this field is omitted, the transition emits no such event.
   */
  uint64_t transition_id;
} mln_animation_options;
/** Optional fitting controls for camera-for-viewport queries. */
typedef struct mln_camera_fit_options {
  uint32_t size;
  uint32_t fields;
  mln_edge_insets padding;
  double bearing;
  double pitch;
} mln_camera_fit_options;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
/** Coordinate array view. Coordinates are latitude/longitude pairs. */
typedef struct mln_coordinate_span {
  /** Coordinates. Null only when coordinate_count is 0. */
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
/** Geographic bounds in degrees. */
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
/** Optional map camera constraint fields. */
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  /** Read when fields contains MLN_BOUND_OPTION_BOUNDS. */
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;