bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


  static ffi.Pointer<mln_adapter_queued_resource_request> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> owner,
    required int handle,
    required ffi.Pointer<ffi.Char> requested_url,
    required ffi.Pointer<ffi.Char> resolved_url,
    required int kind,
    required int loading_method,
    required int priority,
    required int usage,
    required int storage_policy,
    required bool has_range,
    required int range_start,
    required int range_end,
    required bool has_prior_modified,
    required int prior_modified_unix_ms,
    required bool has_prior_expires,
    required int prior_expires_unix_ms,
    required ffi.Pointer<ffi.Char> prior_etag,
    required ffi.Pointer<ffi.Uint8> prior_data,
    required int prior_data_size,
  }) => $allocator<mln_adapter_queued_resource_request>()
    ..ref.owner = owner
    ..ref.handle = handle
    ..ref.requested_url = requested_url
    ..ref.resolved_url = resolved_url
    ..ref.kind = kind
    ..ref.loading_method = loading_method
    ..ref.priority = priority
    ..ref.usage = usage
    ..ref.storage_policy = storage_policy
    ..ref.has_range = has_range
    ..ref.range_start = range_start
    ..ref.range_end = range_end
    ..ref.has_prior_modified = has_prior_modified
    ..ref.prior_modified_unix_ms = prior_modified_unix_ms
    ..ref.has_prior_expires = has_prior_expires
    ..ref.prior_expires_unix_ms = prior_expires_unix_ms
    ..ref.prior_etag = prior_etag
    ..ref.prior_data = prior_data
    ..ref.prior_data_size = prior_data_size;
}

typedef mln_adapter_queued_resource_request_listener =
    ffi.Pointer<
      ffi.NativeFunction<mln_adapter_queued_resource_request_listenerFunction>
    >;
typedef mln_adapter_queued_resource_request_listenerFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> request);
typedef Dartmln_adapter_queued_resource_request_listenerFunction =
    void Function(ffi.Pointer<ffi.Void> request);

final class mln_adapter_resource_provider_rule extends ffi.Struct {
  @ffi.Uint32()
  external int kind;

  @ffi.Uint32()
  external int flags;

  external ffi.Pointer<ffi.Char> requested_url;

  external mln_resource_response response;
}

final class mln_adapter_resource_provider_rules extends ffi.Struct {
  external ffi.Pointer<mln_adapter_resource_provider_rule> rules;

  @ffi.Size()
  external int count;

  static ffi.Pointer<mln_adapter_resource_provider_rules> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_adapter_resource_provider_rule> rules,
    required int count,
  }) => $allocator<mln_adapter_resource_provider_rules>()
    ..ref.rules = rules
    ..ref.count = count;
}

final class mln_adapter_resource_rewrite_rule extends ffi.Struct {
  @ffi.Uint32()
  external int kind;

  @ffi.Uint32()
  external int flags;

  external ffi.Pointer<ffi.Char> url;

  external ffi.Pointer<ffi.Char> replacement_url;

  static ffi.Pointer<mln_adapter_resource_rewrite_rule> $allocate(
    ffi.Allocator $allocator, {
    required int kind,
    required int flags,
    required ffi.Pointer<ffi.Char> url,
    required ffi.Pointer<ffi.Char> replacement_url,
  }) => $allocator<mln_adapter_resource_rewrite_rule>()
    ..ref.kind = kind
    ..ref.flags = flags
    ..ref.url = url
    ..ref.replacement_url = replacement_url;
}

final class mln_adapter_resource_rewrite_rules extends ffi.Struct {
  external ffi.Pointer<mln_adapter_resource_rewrite_rule> rules;

  @ffi.Size()
  external int count;

  static ffi.Pointer<mln_adapter_resource_rewrite_rules> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_adapter_resource_rewrite_rule> rules,
    required int count,
  }) => $allocator<mln_adapter_resource_rewrite_rules>()
    ..ref.rules = rules
    ..ref.count = count;
}

enum mln_adapter_resource_route_flags {
  MLN_ADAPTER_RESOURCE_ROUTE_FLAGS_NONE(0),
  MLN_ADAPTER_RESOURCE_ROUTE_MATCH_GLOB(1),
  MLN_ADAPTER_RESOURCE_ROUTE_USE_REQUESTED_URL(2);

  final int value;
  const mln_adapter_resource_route_flags(this.value);

  static mln_adapter_resource_route_flags fromValue(int value) =>
      switch (value) {
        0 => MLN_ADAPTER_RESOURCE_ROUTE_FLAGS_NONE,
        1 => MLN_ADAPTER_RESOURCE_ROUTE_MATCH_GLOB,
        2 => MLN_ADAPTER_RESOURCE_ROUTE_USE_REQUESTED_URL,
        _ => throw ArgumentError(
          'Unknown value for mln_adapter_resource_route_flags: $value',
        ),
      };
}

enum mln_adapter_url_match_flags {
  MLN_ADAPTER_URL_MATCH_FLAGS_NONE(0),
  MLN_ADAPTER_URL_MATCH_GLOB(1);

  final int value;
  const mln_adapter_url_match_flags(this.value);

  static mln_adapter_url_match_flags fromValue(int value) => switch (value) {
    0 => MLN_ADAPTER_URL_MATCH_FLAGS_NONE,
    1 => MLN_ADAPTER_URL_MATCH_GLOB,
    _ => throw ArgumentError(
      'Unknown value for mln_adapter_url_match_flags: $value',
    ),
  };
}

enum mln_ambient_cache_operation {
  MLN_AMBIENT_CACHE_OPERATION_RESET_DATABASE(1),
  MLN_AMBIENT_CACHE_OPERATION_PACK_DATABASE(2),
  MLN_AMBIENT_CACHE_OPERATION_INVALIDATE(3),
  MLN_AMBIENT_CACHE_OPERATION_CLEAR(4);

  final int value;
  const mln_ambient_cache_operation(this.value);

  static mln_ambient_cache_operation fromValue(int value) => switch (value) {
    1 => MLN_AMBIENT_CACHE_OPERATION_RESET_DATABASE,
    2 => MLN_AMBIENT_CACHE_OPERATION_PACK_DATABASE,
    3 => MLN_AMBIENT_CACHE_OPERATION_INVALIDATE,
    4 => MLN_AMBIENT_CACHE_OPERATION_CLEAR,
    _ => throw ArgumentError(
      'Unknown value for mln_ambient_cache_operation: $value',
    ),
  };
}

enum mln_animation_option_field {
  MLN_ANIMATION_OPTION_DURATION(1),
  MLN_ANIMATION_OPTION_VELOCITY(2),
  MLN_ANIMATION_OPTION_MIN_ZOOM(4),
  MLN_ANIMATION_OPTION_EASING(8),
  MLN_ANIMATION_OPTION_TRANSITION_ID(16);

  final int value;
  const mln_animation_option_field(this.value);

  static mln_animation_option_field fromValue(int value) => switch (value) {
    1 => MLN_ANIMATION_OPTION_DURATION,
    2 => MLN_ANIMATION_OPTION_VELOCITY,
    4 => MLN_ANIMATION_OPTION_MIN_ZOOM,
    8 => MLN_ANIMATION_OPTION_EASING,
    16 => MLN_ANIMATION_OPTION_TRANSITION_ID,
    _ => throw ArgumentError(
      'Unknown value for mln_animation_option_field: $value',
    ),
  };
}

final class mln_animation_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  @ffi.Double()
  external double duration_ms;

  @ffi.Double()
  external double velocity;

  @ffi.Double()
  external double min_zoom;

  external mln_unit_bezier easing;

  @ffi.Uint64()
  external int transition_id;
}

enum mln_bound_option_field {
  MLN_BOUND_OPTION_BOUNDS(1),
  MLN_BOUND_OPTION_MIN_ZOOM(2),
  MLN_BOUND_OPTION_MAX_ZOOM(4),
  MLN_BOUND_OPTION_MIN_PITCH(8),
  MLN_BOUND_OPTION_MAX_PITCH(16),
  MLN_BOUND_OPTION_UNBOUNDED(32);

  final int value;
  const mln_bound_option_field(this.value);

  static mln_bound_option_field fromValue(int value) => switch (value) {
    1 => MLN_BOUND_OPTION_BOUNDS,
    2 => MLN_BOUND_OPTION_MIN_ZOOM,
    4 => MLN_BOUND_OPTION_MAX_ZOOM,
    8 => MLN_BOUND_OPTION_MIN_PITCH,
    16 => MLN_BOUND_OPTION_MAX_PITCH,
    32 => MLN_BOUND_OPTION_UNBOUNDED,
    _ => throw ArgumentError(
      'Unknown value for mln_bound_option_field: $value',
    ),
  };
}

final class mln_bound_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external mln_lat_lng_bounds bounds;

  @ffi.Double()
  external double min_zoom;

  @ffi.Double()
  external double max_zoom;

  @ffi.Double()
  external double min_pitch;

  @ffi.Double()
  external double max_pitch;
}

enum mln_camera_change_mode {
  MLN_CAMERA_CHANGE_MODE_IMMEDIATE(0),
  MLN_CAMERA_CHANGE_MODE_ANIMATED(1);

  final int value;
  const mln_camera_change_mode(this.value);

  static mln_camera_change_mode fromValue(int value) => switch (value) {
    0 => MLN_CAMERA_CHANGE_MODE_IMMEDIATE,
    1 => MLN_CAMERA_CHANGE_MODE_ANIMATED,
    _ => throw ArgumentError(
      'Unknown value for mln_camera_change_mode: $value',
    ),
  };
}

enum mln_camera_fit_option_field {
  MLN_CAMERA_FIT_OPTION_PADDING(1),
  MLN_CAMERA_FIT_OPTION_BEARING(2),
  MLN_CAMERA_FIT_OPTION_PITCH(4);

  final int value;
  const mln_camera_fit_option_field(this.value);

  static mln_camera_fit_option_field fromValue(int value) => switch (value) {
    1 => MLN_CAMERA_FIT_OPTION_PADDING,
    2 => MLN_CAMERA_FIT_OPTION_BEARING,
    4 => MLN_CAMERA_FIT_OPTION_PITCH,
    _ => throw ArgumentError(
      'Unknown value for mln_camera_fit_option_field: $value',
    ),
  };
}

final class mln_camera_fit_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external mln_edge_insets padding;

  @ffi.Double()
  external double bearing;

  @ffi.Double()
  external double pitch;
}

enum mln_camera_option_field {
  MLN_CAMERA_OPTION_CENTER(1),
  MLN_CAMERA_OPTION_ZOOM(2),
  MLN_CAMERA_OPTION_BEARING(4),
  MLN_CAMERA_OPTION_PITCH(8),
  MLN_CAMERA_OPTION_CENTER_ALTITUDE(16),
  MLN_CAMERA_OPTION_PADDING(32),
  MLN_CAMERA_OPTION_ANCHOR(64),
  MLN_CAMERA_OPTION_ROLL(128),
  MLN_CAMERA_OPTION_FOV(256);

  final int value;
  const mln_camera_option_field(this.value);

  static mln_camera_option_field fromValue(int value) => switch (value) {
    1 => MLN_CAMERA_OPTION_CENTER,
    2 => MLN_CAMERA_OPTION_ZOOM,
    4 => MLN_CAMERA_OPTION_BEARING,
    8 => MLN_CAMERA_OPTION_PITCH,
    16 => MLN_CAMERA_OPTION_CENTER_ALTITUDE,
    32 => MLN_CAMERA_OPTION_PADDING,
    64 => MLN_CAMERA_OPTION_ANCHOR,
    128 => MLN_CAMERA_OPTION_ROLL,
    256 => MLN_CAMERA_OPTION_FOV,
    _ => throw ArgumentError(
      'Unknown value for mln_camera_option_field: $value',
    ),
  };
}

final class mln_camera_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  @ffi.Double()
  external double latitude;

  @ffi.Double()
  external double longitude;

  @ffi.Double()
  external double center_altitude;

  external mln_edge_insets padding;

  external mln_screen_point anchor;

  @ffi.Double()
  external double zoom;

  @ffi.Double()
  external double bearing;

  @ffi.Double()
  external double pitch;

  @ffi.Double()
  external double roll;

  @ffi.Double()
  external double field_of_view;
}

final class mln_canonical_tile_id extends ffi.Struct {
  @ffi.Uint32()
  external int z;

  @ffi.Uint32()
  external int x;

  @ffi.Uint32()
  external int y;

  static ffi.Pointer<mln_canonical_tile_id> $allocate(
    ffi.Allocator $allocator, {
    required int z,
    required int x,
    required int y,
  }) => $allocator<mln_canonical_tile_id>()
    ..ref.z = z
    ..ref.x = x
    ..ref.y = y;
}

enum mln_constrain_mode {
  MLN_CONSTRAIN_MODE_NONE(0),
  MLN_CONSTRAIN_MODE_HEIGHT_ONLY(1),
  MLN_CONSTRAIN_MODE_WIDTH_AND_HEIGHT(2),
  MLN_CONSTRAIN_MODE_SCREEN(3);

  final int value;
  const mln_constrain_mode(this.value);

  static mln_constrain_mode fromValue(int value) => switch (value) {
    0 => MLN_CONSTRAIN_MODE_NONE,
    1 => MLN_CONSTRAIN_MODE_HEIGHT_ONLY,
    2 => MLN_CONSTRAIN_MODE_WIDTH_AND_HEIGHT,
    3 => MLN_CONSTRAIN_MODE_SCREEN,
    _ => throw ArgumentError('Unknown value for mln_constrain_mode: $value'),
  };
}

final class mln_coordinate_span extends ffi.Struct {
  external ffi.Pointer<mln_lat_lng> coordinates;

  @ffi.Size()
  external int coordinate_count;

  static ffi.Pointer<mln_coordinate_span> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_lat_lng> coordinates,
    required int coordinate_count,
  }) => $allocator<mln_coordinate_span>()
    ..ref.coordinates = coordinates
    ..ref.coordinate_count = coordinate_count;
}
